--- a/Trivia/Life/Biologist/acid/burn/acidburn.html
+++ b/Trivia/Life/Biologist/acid/burn/acidburn.html
@@ -107,7 +107,7 @@
             <head>
           
             <div style="text-align: center">
-                <a href="/Trivia/Life/Biologist/acid/nothing/"><button class="button3">Continue</button></a>
+                <a href="/Trivia/Life/Biologist/acid/burn/burnEnd/burnend.html"><button class="button3">Continue</button></a>
 
                 
             </div>
