--- a/Trivia/Life/Biologist/acid/freeze/freezeEnd/freezeend.html
+++ b/Trivia/Life/Biologist/acid/freeze/freezeEnd/freezeend.html
@@ -107,7 +107,7 @@
             <head>
           
             <div style="text-align: center">
-                <a href="/Trivia/Life/Biologist/acid/nothing/"><button class="button3">Back</button></a>
+                <a href="/Trivia/Life/Biologist/Act1b.html"><button class="button3">Back</button></a>
 
                 
             </div>
