--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/drop2.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/drop2.html
@@ -105,7 +105,7 @@
             <head>
           
             <div style="text-align: center">
-                <a href="/Trivia/Life/Biologist/blood/drop/2path3.html"><button class="button3">Wait it out</button></a>
+                <a href="/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/"><button class="button3">Wait it out</button></a>
                 <a href="/Trivia/Life/Biologist/blood/dontfeed/3path3.html"><button class="button3">Leave the room</button></a>
                 
             </div>
