--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/pouracid/acidend/acidend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/pouracid/acidend/acidend.html
@@ -10,7 +10,8 @@
  <div style="text-align: center">
 <h3> 
      You were able to escape with 3 people. 
-     Unfortunately, the broken door allowed the creature to escape.</h3>
+     Unfortunately, the broken door allowed the creature to escape as well.
+</h3> <h3> The creature remains.</h3>
   
 </div>
  <!-- BACKGROUND -->
