--- a/Trivia/Life/Biologist/blood/blood.html
+++ b/Trivia/Life/Biologist/blood/blood.html
@@ -91,7 +91,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/emojipedia/181/drop-of-blood_1fa78.png" width="250" height="250"
                 alt="">
                 
                </div>
