--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/leave.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/leave.html
@@ -99,7 +99,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQOCoTWrJ0rXzEik9IbPVhB7aDu_4bQT7zqz9g2xiN61Y4d3sDO" width="550" height="300"
                 alt="">
                 
                </div>
