--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/anothersol.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/anothersol.html
@@ -78,7 +78,8 @@
            <h3> 
              You decided that kicking the door knob wasn't a good idea. You look closely at the door knob and noticed a code lock. You must have forgotten about it during all the pressure.
              You swiftly input the code and unlock the door. Due to thinking rationally, you were able to save a lot more time. 
-             You open the door to let them out, but the last person is caught by the creature! 
+             You open the door to let them out, but the last person is caught by the creature! </h3>
+             <h3>
              Should you help that person or close the door?          </h3> 
            <h3> What will you choose?</h3>
            </div>
@@ -93,7 +94,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://render.fineartamerica.com/images/rendered/default/acrylic-print/10.000/6.625/hangingwire/break/images-medium-5/dark-hallway-with-an-opened-door-with-bright-light-coming-in-kamisoka.jpg" width="350" height="350"
                 alt="">
                 
                </div>
