--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/help.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/help.html
@@ -91,7 +91,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://i.pinimg.com/originals/b7/f4/38/b7f438df8dead871322260849078c811.jpg" width="250" height="250"
                 alt="">
                 
                </div>
