--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Cohort/cohort.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Cohort/cohort.html
@@ -95,7 +95,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://previews.123rf.com/images/shotsstudio/shotsstudio1306/shotsstudio130600015/20455323-general-view-of-three-people-working-in-a-chemistry-lab-with-colorful-liquids-and-transparent-tools-.jpg" width="550" height="350"
                 alt="">
                 
                </div>
