--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/helpstay.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/helpstay.html
@@ -92,7 +92,8 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://previews.123rf.com/images/aalbedouin/aalbedouin1711/aalbedouin171100926/90357608-toxic-gas-icon-symbol-premium-quality-isolated-mask-element-in-trendy-style-.jpg" 
+                width="250" height="250"
                 alt="">
                 
                </div>
