--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kick.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kick.html
@@ -100,7 +100,9 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTd3B5ev9pF4LDPJwkhOefHt3RcigNTj8de6Svchizfy0TXP-5K" width="330" height="250"
+                alt="">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRB0tnM5wtXLnSlxKWFd-bYiFyegiwbuvrQkbf2RP59AvJ8Gvq2" width="250" height="250"
                 alt="">
                 
                </div>
