--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/stay.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/stay.html
@@ -94,7 +94,9 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://www.wikihow.com/images/thumb/b/be/Kick-Down-a-Door-Step-9-Version-4.jpg/aid2015-v4-728px-Kick-Down-a-Door-Step-9-Version-4.jpg" width="250" height="250"
+                alt="">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsFjGF7P-N50hvTynSuJFOi9rAGpnENU-dqFtaP8AyAOHCcTRZ" width="250" height="250"
                 alt="">
                 
                </div>
