--- a/Trivia/Life/Biologist/blood/drop/drop.html
+++ b/Trivia/Life/Biologist/blood/drop/drop.html
@@ -97,7 +97,10 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNFF8f_pFDT1urIo0YlmsistI1h4oMdmvJSD2BXRJ2V_f-zewn" width="300" height="350"
+                alt="">
+
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQi1qzMWaScqj1DwdqXuciaX8_PTVtQhOnxW5l40NJgPKZBswMz" width="250" height="300"
                 alt="">
                 
                </div>
