--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnit.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnit.html
@@ -73,11 +73,12 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Blood</h1>
+            
             <div style="text-align: center">
            <h3> 
                You grabbed the lighter and tried burning it. To no avail, heat did not affect it, it was resistant. The organism began to take shape into a creature with fangs and claws. You had failed to stop it. 
-               The creature pounced and sunk it's fangs into your hand. You bought your crew some time by stalling the creature, and soon your team finally breaks open the door knob to escape, leaving you and the creature behind. </h3>
+               The creature pounced and sunk it's fangs into your hand. </h3>
+               <h3>You bought your crew some time by stalling the creature, and soon your team finally breaks open the door knob to escape, leaving you and the creature behind. </h3>
              <h3>  
             </h3>
            </div>
