--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/drop2.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/drop2.html
@@ -91,7 +91,10 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://img.clipartimage.com/a-stressed-man-hiding-under-his-desk-royalty-free-clipart-picturehide-under-desk-clipart-262_300.jpg" 
+                width="250" height="250"
+                alt="">
+                <img src="https://cdn.shopify.com/s/files/1/2596/3326/collections/Egress_large.jpg?v=1525072162" width="300" height="150"
                 alt="">
                 
                </div>
