--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/don't/don't.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/don't/don't.html
@@ -97,7 +97,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://cdn7.dissolve.com/p/D2115_279_001/D2115_279_001_1200.jpg" width="450" height="250"
                 alt="">
                 
                </div>
