--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/don't/don'tend/don'tend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/don't/don'tend/don'tend.html
@@ -91,7 +91,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://www.desktopbackground.org/download/1680x1050/2014/10/18/841878_wallpaper-face-scary-black-and-white-evil-ghost-abstract_1920x1080_h.jpg" width="350" height="250"
                 alt="">
                 
                </div>
