--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/staybehind/staybehindend/staybehindend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/staybehind/staybehindend/staybehindend.html
@@ -93,7 +93,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://i.pinimg.com/originals/d4/f0/54/d4f05473e5412b8d513d4671501048f0.jpg" width="450" height="450"
                 alt="">
                 
                </div>
