--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnit.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnit.html
@@ -92,7 +92,8 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://www.thoughtco.com/thmb/xs2bL5Pi-6SJPuZboJXAZqzzCwc=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/flames-82087438-59ff1d2bb39d030019906514.jpg" 
+                width="450" height="300"
                 alt="">
                 
                </div>
