--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnitend/burnitend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnitend/burnitend.html
@@ -90,7 +90,8 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/woman-praying-in-a-dark-place-royalty-free-image-543574284-1549494908.jpg?crop=0.66667xw:1xh;center,top&resize=480:*" 
+                width="450" height="450"
                 alt="">
                 
                </div>
