--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/wait.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/wait.html
@@ -93,7 +93,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://uwaterloo.ca/chem13-news-magazine/sites/ca.chem13-news-magazine/files/uploads/images/may17_messylab.png" width="500" height="350"
                 alt="">
                 
                </div>
