--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/wait3.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/wait3.html
@@ -92,7 +92,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://i.pinimg.com/originals/e4/b7/29/e4b729bc375d3b75113bf316afaa8898.jpg" width="450" height="550"
                 alt="">
                 
                </div>
