--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/staybehind/staybehind.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/staybehind/staybehind.html
@@ -92,7 +92,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://images-na.ssl-images-amazon.com/images/I/71wNHvnAPqL._SL1388_.jpg" width="350" height="350"
                 alt="">
                 
                </div>
