--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscape2.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscape2.html
@@ -106,7 +106,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyr-POGWVJybssA9KJ4QME2W4bIhLOl-Mm0zdl3pLBJ0YfOJJh" width="650" height="400"
                 alt="">
                 
                </div>
