--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapeKeep/kickEscapeKeep.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapeKeep/kickEscapeKeep.html
@@ -101,7 +101,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://cdnb.artstation.com/p/assets/images/images/009/634/293/large/abdesselam-guerroudj-r0.jpg?1520057399" width="750" height="550"
                 alt="">
                 
                </div>
