--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapePush/kickEscapePush.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapePush/kickEscapePush.html
@@ -96,7 +96,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://i.pinimg.com/736x/4d/1b/e8/4d1be8e83ee0b9bdc205f4f8ab2672ce--night-terror-scary-pictures.jpg" width="350" height="350"
                 alt="">
                 
                </div>
