--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickescape.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickescape.html
@@ -92,7 +92,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://i.pinimg.com/736x/68/9d/3f/689d3f603fa77aab23e7a9ce7a46b3a7.jpg" width="350" height="450"
                 alt="">
                 
                </div>
