--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapePush/kickEscapePushEnd/kickEscapePushEnd.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapePush/kickEscapePushEnd/kickEscapePushEnd.html
@@ -94,7 +94,7 @@
             <!-- add image/gif -->
             <div class="v">
     
-                <img src="" width="250" height="250"
+                <img src="https://i.pinimg.com/736x/d0/fa/2f/d0fa2fafa211c16d144ad0732bc3eafe--horror-photography-character-concept.jpg" width="350" height="450"
                 alt="">
                 
                </div>
