--- a/Trivia/Life/Biologist/Act1b.html
+++ b/Trivia/Life/Biologist/Act1b.html
@@ -73,8 +73,11 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Background</h1>
+            <div style="text-align: center">
+            <h1>Background</h1>
            <h3>You're a biologist studying a new but strange organism in a secured lab. You and your cohorts are experimenting the new organism to learn more about it. </h3>
+           <h3> This game contains 15 Endings</h3>
+           </div>
             <!-- BACKGROUND -->
             <style>
                 body {
