--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/staybehind/staybehindend/staybehindend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/staybehind/staybehindend/staybehindend.html
@@ -73,11 +73,13 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Dead Ending</h1>
+            <div class="v">
+            <h1 class="white">Dead Ending</h1>
+            </div>
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
              You died to save 2 people, however, breaking the door knob had set the creature loose to cause more havoc.</h3>
-             <h3>
+             <h3 class="white">
              Perhaps, it wasn't a good idea to be a hero.
            </h3> 
            
@@ -85,7 +87,7 @@
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
