--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Family/family.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Family/family.html
@@ -73,9 +73,11 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Your Family</h1>
+            <div class="v">
+            <h1 class="white">Your Family</h1>
+            </div>
             <div style="text-align: center">
-           <h3> I grew up in a caring family that always looked after me. 
+           <h3 class="white"> I grew up in a caring family that always looked after me. 
                Years later, I finally had my own family with a new born.
                At the time, I didn't know what to name her, so I let my wife do the naming. 
                She decided to name her after my mother, who is the sweetest person to live.
@@ -86,7 +88,7 @@
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
