--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Release3.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Release3.html
@@ -75,14 +75,14 @@
             <script src='main.js'></script>
       
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
                Sitting on the ground, with your last breath, you thought about everything you've gone through. </h3> 
-           <h3>Choose what to think about</h3>
+           <h3 class="white">Choose what to think about</h3>
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
