--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapeKeep/kickEscapeKeep.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapeKeep/kickEscapeKeep.html
@@ -75,16 +75,16 @@
             <script src='main.js'></script>
           
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
              You didn't want to sabotage the person helping you. 
              You were grateful that someone decided to help you in the most desperate situation.</h3>
-             <h3>
+             <h3 class="white">
              So, you both kept going, unfortunately the creature caught up to you and pounced, which knocked both of you to the ground.
              </h3>
-             <h3>
+             <h3 class="white">
              You open your eyes to see a monster with sharp claws and big fangs, crunching the skull of the person right beside you. 
              Blood spurted everywhere. 
-             <h3>
+             <h3 class="white">
              You stood back up and made an attempt to escape. </h3>
 
               
@@ -93,7 +93,7 @@
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
