--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapePush/kickEscapePush.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapePush/kickEscapePush.html
@@ -75,12 +75,12 @@
             <script src='main.js'></script>
            
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
              You push the person towards creature to buy yourself some time. </h3>
-             <h3>
+             <h3 class="white">
              The person had a look of shock at your betrayal. 
              </h3>
-             <h3>
+             <h3 class="white">
              The last thing you heard from her was her scream, as she gets eaten alive.
             </h3> 
           
@@ -88,7 +88,7 @@
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
