--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnit.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnit.html
@@ -75,16 +75,16 @@
             <script src='main.js'></script>
             
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
                You grabbed the lighter and tried burning it. To no avail, heat did not affect it, it was resistant. The organism began to take shape into a creature with fangs and claws. You had failed to stop it. 
                The creature pounced and sunk it's fangs into your hand. </h3>
-               <h3>You bought your crew some time by stalling the creature, and soon your team finally breaks open the door knob to escape, leaving you and the creature behind. </h3>
-             <h3>  
-            </h3>
+               <h3 class="white">You bought your crew some time by stalling the creature, and soon your team finally breaks open the door knob to escape, leaving you and the creature behind. </h3>
+            
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
