--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnitend/burnitend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/burnit/burnitend/burnitend.html
@@ -73,16 +73,18 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Lonely Ending</h1>
+            <div class="v">
+            <h1 class="white">Lonely Ending</h1>
+            </div>
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
                 You were left behind to die.</h3>
-             <h3>  
-            </h3>
+           
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
