--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/pouracid/acidend/acidend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/wait/pouracid/acidend/acidend.html
@@ -6,21 +6,24 @@
  <body>
    <script src= "svg.js"></script>
  <script src='main.js'></script>
- <h1 id ='trivia'align="center">Escaped Ending</h1>
+ <div class="v">
+ <h1 class="white">Escaped Ending</h1>
+ </div>
  <div style="text-align: center">
-<h3> 
+<h3 class="white">  
      You were able to escape with 3 people. 
      Unfortunately, the broken door allowed the creature to escape as well.
-</h3> <h3> The creature remains.</h3>
+</h3> <h3 class="white"> The creature remains.</h3>
   
 </div>
  <!-- BACKGROUND -->
  <style>
-     body {
- background-repeat: no-repeat;
- background-size: cover;
- }
- </style>
+        body {
+    background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+    </style>
  <!-- add image/gif -->
  <div class="v">
 
