--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/TheOrganism/TheOrganism.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/TheOrganism/TheOrganism.html
@@ -73,9 +73,11 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">The Creature</h1>
+            <div class="v">
+            <h1 class="white">The Creature</h1>
+            </div>
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
             The organism was first discovered at a crash site from a meteor. The new species was classified as aliens. It is currently kept away from the public view, in Area 51.
              When I found out about it, I was fascinated that extraterrestrial life exists out there.
         I knew I had to learn more about it. But, another part of me feared it. We don't know where it really came from, other than space. 
@@ -87,7 +89,7 @@
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
