--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Turnback/TurnbackEnd/Badend.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Turnback/TurnbackEnd/Badend.html
@@ -75,15 +75,15 @@
             <script src='main.js'></script>
            
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
             The Indecisive Ending</h3> 
-               <h3>You've come so far, just to turn your back. You did not settle the problem. </h3>
-           <h3>The creature still remains.</h3>
+               <h3 class="white">You've come so far, just to turn your back. You did not settle the problem. </h3>
+           <h3 class="white">The creature still remains.</h3>
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
