--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/don't/don't.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/don't/don't.html
@@ -73,10 +73,12 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">You didn't open it</h1>
+            <div class="text-align: center">
+            <h1>You didn't open it</h1>
+            </div>
             <div style="text-align: center">
            <h3> You decided it was safe to keep the door closed, you couldn't risk having the creature escaping. </h3>
-           <h3>You saw the creature through the bloody window, which now looked larger, like it had taken the mass of the human to grow. 
+           <h3>You saw the creature through the bloody window, but only a blurry figure. 
                <h3>
                You looked away from the gruesome scene and waited for backup. Until then, the people in there are going to die.
                </h3>
