--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/leave.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/leave.html
@@ -77,12 +77,12 @@
             <div style="text-align: center">
            <h3> Everything crashed around you as you stumbled out of the room, leaving your cohorts behind with the blob.</h3>
            <h3>
-               Minutes later, the earthqauake settled down. You decided to check back on everyone. </h3>
-               <h3> That's when you heard a scream coming from the specimen laboratory. You rushed to the window covered in smears of blood. 
+               Afterwards, the earthqauake settled down. </h3>
+               <h3> That's when you heard a scream coming from the laboratory. You rushed to the window covered in smears of blood. 
                The creature had gone berserk during the earthquake!</h3>
                <h3> You stood there in shock seeing one of your cohorts on the ground being consumed alive by the creature.
         <h3>
-               You see 3 people still in the laboratory. They're now banging the door to open up. 
+             3 people are still in the laboratory. They're now desperately trying to open the door. 
                <h3>Should you save them, but risk the creature escaping or
                keep the door closed to secure the monster? </h3>
            
