--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/fire extinguisher.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/fire extinguisher.html
@@ -73,25 +73,22 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Fire extinguisher</h1>
+            <h1 id ='trivia'align="center">You went for the Fire extinguisher</h1>
             <div style="text-align: center">
-           <h3> 
-             You ran across the hall for the fire extinguisher. It took you a minute to get there and another going back.</h3>
-             <h3>
-             Unfortunately, by the time you got back, another person had fallen victim. You took a quick glance and saw flesh and bone being stripped away.
-             </h3>
-             <h3 >2 people now remain in the laboratory. </h3>
-             <h3>
-             You immediately swing the fire extinguisher at the door knob. </h3>
-             <h3>It didn't budge, so you swung again, and again, and again. </h3>
-             <h3>When all seemed hopeless, you finally broke the door knob. </h3>
-             <h3>
-             You and the remaining people try to make a run for it, however, you have now set the creature loose to wreak havoc. The creature had morphed into something more terrifying than it was before, if only you hadn't set it free. 
-             The indefinable creature charges towards one of you. You don't know who is going to be the next meal.
-             </h3>
-             <h3>You can choose to run with the group or stay behind to stall the creature.
-           </h3> 
-           <h3> What will you choose?</h3>
+           <h4> 
+             It took you a minute to get there and another going back.
+              Unfortunately, by the time you got back, another person had fallen victim. You took a quick glance and saw flesh and bone being stripped away.
+             </h4>
+             <h4>2 people now remain in the laboratory. </h4>
+             
+             <h4> You used the extinguisher to break the door knob. </h4>
+             <h4>
+             You and the remaining people try to make a run for it, however, you have now set the creature loose. 
+             The indefinable creature charges towards one of you. You don't know who is going to be the next target.
+             </h4>
+             <h4>You can choose to run with the group or stay behind to stall the creature.
+           </h4> 
+           <h4> What will you choose?</h4>
            </div>
             <!-- BACKGROUND -->
             <style>
