--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/open.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/open.html
@@ -76,17 +76,16 @@
             <h1 id ='trivia'align="center">You open it</h1>
             <div style="text-align: center">
            <h4> 
-               Your cohorts are helpless, so you wanted to save them. You try to open the door, but the door knob is jammed. </h4>
+              You try to open the door, but the door knob is jammed. </h4>
                <h4>
-               Through the bloody window you could see the creature leaving the empty suit. It was no longer a tiny blob in a petri dish, it was now the size of a human.
+               Through the bloody window you could see the creature leaving the empty suit. The organism had evolved into a far more terrifying creature.
                </h4>
                <h4>
-                The creature is about to go for it's next kill.
                More people are going to die if you don't act now.
                </h4>
                <h4>
                Luckly, you see a fire extinguisher, maybe you could use it to break the door open. 
-               <h3>However, it is across the hall from you and, by the time you come back with the fire extinguisher, it may be too late to save anyone.
+               <h3>However, it is across the hall from you and, by the time you come back, it may be too late to save anyone.
                    </h3>
                    <h3>
                Another option is to stay where you are now and attempt to open the door with your bare hands.
