--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/close/close.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/close/close.html
@@ -73,18 +73,20 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Close</h1>
             <div style="text-align: center">
-           <h3> 
-               You couldn't risk it anymore, so you pushed the person in, and shut the door. 
-               All you can hear is the person screaming and cursing in agony, until a loud snap ended the noise.
+            <h1 class="white">Close</h1>
+            </div>
+            <div style="text-align: center">
+           <h3 class="white"> 
+               You couldn't risk the creature escaping, so you pushed the person in, and shut the door. 
+               All you hear is the agonizing scream and cursing, until a loud snap ended the noise.
             You manage to trap the creature inside but, two of your cohorts are disgusted by your action, however at the end of the day, it doesn't really matter.</h3> 
           
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
