--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/help.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/help.html
@@ -73,17 +73,19 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">help</h1>
+            <div class="v">
+            <h1 class="white">help</h1>
+            </div>
             <div style="text-align: center">
-           <h3> 
-               You saw the face of a monster behind a face of someone in horror. You grabbed the person's arm and yanked it out of the monster's grasp, and shut the door to lock the creature inside. 
+           <h3 class="white"> 
+               You saw the face of horror behind the face of terror. You grabbed the person's arm and yanked it out of the grasp of the monster. You shut the door and lock the creature inside. 
                Two of your cohorts admired your bravery.</h3> 
-           <h3> What will you do now?</h3>
+           <h3 class="white"> What will you do now?</h3>
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
