--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Release.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/Gas/Release/Release.html
@@ -75,16 +75,16 @@
             <script src='main.js'></script>
           
             <div style="text-align: center">
-           <h3> 
+           <h3 class="white"> 
                You've come so far, and now it's time to end it all. You turn the valve and the gas releases into the facility. 
             The mask you wore did not filter the gas.
             You start to have problems with breathing. </h3> 
-           <h3>Choose</h3>
+           <h3 class="white">Choose</h3>
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
