--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscape2.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscape2.html
@@ -77,10 +77,10 @@
             <div style="text-align: center">
              <h3 class="white">
              When all hope seems lost, someone had came back to help you. 
-             It was one of your cohorts that you had rescued. The person puts your arm over her shoulders and helped you walk. 
+             It was one of your cohorts that you had rescued.
              However, both of you are still slow enough for the creature to catch up to.
              
-             You kept on limping with the person supporting you. Then, you heard quick foot steps getting louder and louder. 
+             You hear foot steps getting louder and louder. 
              If you don't do something, the creature will catch up to you.
              <h3 class="white">
              An opportunity had rise. 
