--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/anothersol.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/anothersol.html
@@ -73,20 +73,22 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Another solution</h1>
             <div style="text-align: center">
-           <h3> 
-             You decided that kicking the door knob wasn't a good idea. You look closely at the door knob and noticed a code lock. You must have forgotten about it during all the pressure.
+            <h1 class="white">Another solution</h1>
+            </div>
+            <div style="text-align: center">
+           <h3 class="white"> 
+             You look closely at the door and noticed a code lock. You must have forgotten about it during all the pressure.
              You swiftly input the code and unlock the door. Due to thinking rationally, you were able to save a lot more time. 
              You open the door to let them out, but the last person is caught by the creature! </h3>
-             <h3>
+             <h3 class="white">
              Should you help that person or close the door?          </h3> 
-           <h3> What will you choose?</h3>
+           <h3 class="white"> What will you choose?</h3>
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
