--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/helpstay.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/anothersol/help/helpstay/helpstay.html
@@ -73,18 +73,20 @@
             <body>
               <script src= "svg.js"></script>
             <script src='main.js'></script>
-            <h1 id ='trivia'align="center">Stay</h1>
+            <div class="v">
+            <h1 class="white">Stay</h1>
+            </div>
             <div style="text-align: center">
-           <h3> 
-               You didn't want to leave yet, because the creature still remained. 
+           <h3 class="white"> 
+               You didn't want to leave, because you have a responsibility. 
                You have to end it all, before the abomination can cause further harm. 
                You told everyone to leave, because you were going to fill the facility with toxic gas.   </h3> 
-           <h3> </h3>
+         
            </div>
             <!-- BACKGROUND -->
             <style>
                 body {
-            background-image: url();
+            background-image: url(https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/-hc9b5b/malaysia-ringgit-banknotes-falls-on-black-background-4k-clip-normal-speed_n1glvblm-l__F0000.png);
             background-repeat: no-repeat;
             background-size: cover;
             }
