--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapeKeep/kickEscapeKeep.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/kick/kickEscape/kickEscapeKeep/kickEscapeKeep.html
@@ -75,14 +75,12 @@
             <script src='main.js'></script>
           
             <div style="text-align: center">
-           <h3 class="white"> 
-             You didn't want to sabotage the person helping you. 
-             You were grateful that someone decided to help you in the most desperate situation.</h3>
+           
              <h3 class="white">
-             So, you both kept going, unfortunately the creature caught up to you and pounced, which knocked both of you to the ground.
+            You both kept going, unfortunately the creature caught up to you and pounced, which knocked both of you to the ground.
              </h3>
              <h3 class="white">
-             You open your eyes to see a monster with sharp claws and big fangs, crunching the skull of the person right beside you. 
+             You open your eyes to see the creature crunching the skull of the person beside you. 
              Blood spurted everywhere. 
              <h3 class="white">
              You stood back up and made an attempt to escape. </h3>
