--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/stay.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/stay/stay.html
@@ -75,9 +75,9 @@
             <script src='main.js'></script>
             <div style="text-align: center">
            <h3> 
-             You decided that you wouldn't get the fire extinguisher. </h3>
+             You didn't get the fire extinguisher. </h3>
              <h3>
-            You tryed to open the doorknob, but it did not budge. </h3>
+            You tryed to open the doorknob, but it didn't budge. </h3>
             <h3>
             The creature is about to go for the next kill. 
            </h3> 
