--- a/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/keeprun/keeprun.html
+++ b/Trivia/Life/Biologist/blood/dontfeed/drop2/leave/open/fire extinguisher/keeprun/keeprun.html
@@ -76,7 +76,7 @@
             
             <div style="text-align: center">
            <h3> 
-             You decided to make a run for it, hoping that you wouldn't be the creature's next meal.</h3>
+             You decided to make a run for it, hoping that you wouldn't be the next meal.</h3>
              <h3> Not looking back, you hear someone scream in agony, then a loud *CRUNCH*.</h3>
              <h3> The creature had taken out one of your cohorts, only two of you remain. </h3>
              <h3>
